dev/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app: appli
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: appli
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: appli
    spec:
      containers:
      - name: playground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
        readinessProbe:              
          httpGet:
            path: /healthz            
            port: 8888
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8888
          initialDelaySeconds: 10
          periodSeconds: 15
