dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
  namespace: dev
  labels:
    app: my-app
spec:
  selector:
    matchLabels:
      app: appli
  replicas: 1
  template:
    metadata:
      labels:
        app: appli
    spec:
      containers:
      - name: playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
